Replaced deprecated class.getInstance() with class.getConstructor().getInstance()